css/style.css
/*////////////////////////////////BODY//////////////////////////////////////////*/

body {
	padding: 0%;                /*Mise à zéro marges intérieures*/
	margin: 0%;                 /*Mise à zéro marges extérieures*/
	padding:0;
    background: url(https://s-media-cache-ak0.pinimg.com/736x/82/a6/6c/82a66c6b69a61564494a682e4fb0d704.jpg) no-repeat center fixed; 
    background-size: cover; /*Couleur de fond de la page*/
    
}

h1 {
	color: #1693a5;
	margin-bottom: 5%;
}

.container{
	padding: 0;
}

/*//////////////////////////////////////////////////////////////////////////////*/
/*///////////////////////////////HEADER/////////////////////////////////////////*/
/*//////////////////////////////////////////////////////////////////////////////*/

img {
	width: 100%; /*Taille de l'image (largeur)*/
}

/*////////////Barre de navigation//////////////*/

nav {
	margin-top: 5%; /*Marge en haut de la barre de navigation, décolle du haut de la page*/
}

#barre{
	height: 25px;
	background-color: #1D4B58;
	border-bottom: 3px solid #E0A377;
}

.navbar {
	background-color: transparent; /*La barre de navigation prend la couleur du background*/
	border:none;               /*Pas de bordure*/
	font-size: 1.8em;          /*Taille de la typo*/
}

.navbar-nav li:hover{            /*Quand on survol un lien de la barre de navigation*/
	background-color: #1693a5;
	border-bottom: 5px solid #CF844D;
}

.navbar-default .navbar-nav li:hover a{     /*Quand le lien est survolé, la typo devient blanche*/
	color: white;
}

.navbar-default .navbar-nav > .open > a,           /*Quand l'un des liens de la barre de navigation est selectionné*/
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
  color: white;
  background-color: #1693a5;
}

.dropdown-menu {                                 /*Menu déroulant*/
	background-color: rgba(0,0,0,0.8);           /*Arrière plan avec un peu de transparence*/
}

.navbar-default .navbar-nav .open .dropdown-menu > li > a { /*Pour que la couleur des liens ne change pas lorsque la souris n'est plus sur le menu séléctionné*/
    padding-top: 5%;
    padding-bottom: 5%;
    color: white;
}

.navbar-default .navbar-nav .open .dropdown-menu li:hover a{ /*Quand on survol un lien d'un sous menu*/
 	background-color: #1693a5;
}

/*//////////////////////////////////////////////////////////////////*/
/*/////////////////////////////FOOTER///////////////////////////////*/
/*//////////////////////////////////////////////////////////////////*/

footer {                 
	padding:2% 2% 2% 6%;
	background-color: rgba(51,93,104,1);
	margin: 2% -7.5% 0 -7.5%;
	color: white;
}

footer a {               /*Lien contenu dans le footer*/
	color:white;
}

footer a:hover{
	color: #aaa9a9;
	text-decoration: none;
}

#lienMentions{
	padding-top: 2%;
}

/*///////////////////////////////Citation////////////////////////////////////////*/

blockquote {
	border-left:none;
	margin-bottom: 0;
}

blockquote footer {
	margin-top: -4%;
	margin-right: 0;
	color: white;
	background-color: unset;
}

#citation{
	margin: -2% -7.5% 2% -8%;
	padding: 1.5%;
	background-color: rgba(18,110,122,0.7);
	font-size: 20px;
	color: white;
	font-weight: 400;
}

/*///////////////////////////////////////////////////////////////////////////////*/
/*//////////////////////////////SECTION FIL ACTU////////////////////////////////*/
/*//////////////////////////////////////////////////////////////////////////////*/

#filActu {
	background-color: #F2F2F2; /*Fond de la section Fil d'actu*/
	padding:1% 3% 1% 3%;             
	box-shadow: 6px 10px 18px 4px rgba(0,0,0,0.3); /*Ombre portée de la section, se détache du fond*/
	margin-bottom: 2%;
}
#filActu h1{
	margin-bottom: 70px
}
#actu{
	
	margin-bottom: -50px;
	margin-top: 25px;
}

#filActu img {
	width: 25%;
	padding-top: 0%;
	border-right: 1px solid orange;
}
.articles {
	border-bottom: 2px solid #1693a5;
}
.pager {
	margin-top: -3%;
	text-align: right;
	font-size: 0.8em;
}

.pager li > a,
.pager li > span {
  display: inline-block;
  padding: 5px 14px;
  background-color: #fff;
  border: 1px solid #1693a5;
  border-radius: 10px;
}

.pager a {
	color: #1693a5;
}

/*//////////////////////////////////////////////////////////////////////////*/
/*/////////////////////////////SECTION PRESSE///////////////////////////////*/
/*//////////////////////////////////////////////////////////////////////////*/

#presse {                      /*Arrière plan de la section presse*/       
	padding-left: 3%;
	padding-top: 1%;
	padding-bottom: 3%;
	background-color: #F2F2F2;
	box-shadow: 6px 10px 18px 4px rgba(0,0,0,0.3);
}

#presse img {                  /*Images appartenant à la section presse*/
	margin:2% 0% 2% 0%;
	width: 100%;
}

#presse h4 {
	margin-bottom: 10%;
}

.lien {
	margin-left: 60%;
	text-decoration: none;
	background-color: #1693a5;
	color: white;
	padding: 3%;
}

.lien:hover {
	background-color: #d1d1d1;
	text-decoration: none;
	color: #1693a5;
}

#lien2 {
	padding-bottom: 8%;
}

/*//////////////////////////////////////////////////////////////////*/
/*/////////////////////////////FACEBOOK///////////////////////////////*/
/*//////////////////////////////////////////////////////////////////*/

#facebookMobile{
	display: none;
}

aside {                   /*Placement de la section contenant l'agenda et réseaux sociaux*/ 
	margin-left: 5%;                  
	padding-left: 1%;
}

/*/////////////////////////////////////////////////////////////////////////////*/
/*/////////////////////////////MENTIONS LEGALES///////////////////////////////*/
/*////////////////////////////////////////////////////////////////////////////*/

#mention {                       /*Arrière plan de la section comportant les mentions légales*/
	padding: 3%;
	background-color: white;
	box-shadow: 1px 2px 4px black;
}
/* ... */

